# RPIRM2Exp

./: LICENSE  README.md
exp/Pico2/: CMakeLists.txt
exp/Pico2/boards/: pico2_rm2.h
exp/Pico2/src/: CMakeLists.txt  files.cmake
exp/Pico2Plus/: CMakeLists.txt  PicoW_WSClient.cmake
exp/Pico2Plus/boards/: pimoroni_pico_plus2_rm2.h
exp/Pico2Plus/src/: CMakeLists.txt  main.cpp  t.sh
exp/Pico2W/: CMakeLists.txt
exp/Pico2W/src/: CMakeLists.txt  main.cpp
exp/RP2040Zero/: CMakeLists.txt
exp/RP2040Zero/boards/: rp2040_zero_rm2.h
exp/RP2040Zero/src/: main.cpp
